fixxx text wrap

--- a/public/css/hal1.css
+++ b/public/css/hal1.css
@@ -113,7 +113,7 @@ a {
 }
 
 #headline .headtittle {
-    height: 3em;
+    height: 2em;
     width: 22em;
     overflow: hidden;
 }
@@ -271,7 +271,7 @@ a {
 
 #news .tittle-right {
     width: 100%;
-    height: 1.4em;
+    height: 1.2em;
     overflow: hidden;
 }
 
